--- a/Curso HTML/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/birthday-invite.html
+++ b/Curso HTML/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/birthday-invite.html
@@ -1,18 +1,39 @@
-<!-- This is one possible solution -->
-<h1>It's My Birthday!</h1>
-<h2>On the 12th May</h2>
 
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-  alt="purple birthday cake with candles" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Parábens</title>
+    <style>
+        body{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+        }
+        a:hover{
+            background-color: #ccc;
+        }
+        li{
+            list-style-type: none;
+        }
 
-<h3>What to bring:</h3>
-<ul>
-  <li>Baloons (I love baloons)</li>
-  <li>Cake (I'm really good at eating)</li>
-  <li>An appetite (There will be lots of food)</li>
-</ul>
+    </style>
+</head>
+<body>
+    <h1>É meu aniversário</h1>
+    <h2>Estais de parabuens</h2>
+    <img src="https://img.elo7.com.br/product/300x400/4D01528/painel-sublimado-redondo-meme-1-50x1-50-personalizado.jpg" alt="bolo de aniversário colorido">
 
-<h3>This is where you need to go:</h3>
-<a
-  href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
-  map link</a>
+    <h3>Tras pra nois:</h3>
+    <ul>
+        <li>Balão</li>
+        <li>Bolo</li>
+        <li>Presentinho</li>
+    </ul>
+
+    <h3>Endereço: </h3>
+    <P><a href="https://www.google.com.br/maps/place/Avenida+Paulista/@-23.5613545,-46.6564943,3a,75y,90t/data=!3m8!1e2!3m6!1sAF1QipM_1FFozrpl3OwLSzim9KD2jFSEqwGJArxtLNnz!2e10!3e12!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipM_1FFozrpl3OwLSzim9KD2jFSEqwGJArxtLNnz%3Dw86-h114-k-no!7i4284!8i5712!4m7!3m6!1s0x94ce59ceb102d799:0xcc40b0fd1ec1f088!8m2!3d-23.5613545!4d-46.6564943!10e5!16s%2Fg%2F11y1h8sh92?entry=ttu&g_ep=EgoyMDI0MTExOS4yIKXMDSoASAFQAw%3D%3D" target="_blank">Avenida Paulista</a> <- Clique e verifique a rota</P>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.1973535855996!2d-46.659069224006906!3d-23.56135447879983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59ceb102d799%3A0xcc40b0fd1ec1f088!2sAvenida%20Paulista!5e0!3m2!1spt-BR!2sbr!4v1732635761557!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
+</body>
+</html>
